--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
   
-    <title>React App</title>
+    <title>FoodOrder</title>
   </head>
   <body>
     <noscript>
